--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
+    "swiper": "^11.1.3",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
